<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OpenCV Face Recognition</string>
    <string name="BLANK"></string>
    <string name="STrain">Train</string>
    <string name="SViewAll">View all faces</string>
    <string name="SSearch">Search</string>
    <string name="SDelete">Delete</string>
    <string name="SEnter">Enter face name, then pres Rec</string>
    <string name="SStopTrain">Stop Training</string>
    <string name="SStopSearch">Stop Search</string>
    <string name="Straininig">Training...</string>
    <string name="SCanntoPredic">More then one face is needed to predict</string>
    <string name="SIdle">Idle</string>
    <string name="SFaceName">Face name:</string>
    <string name="SSearching">Searching</string>
    <string name="SFrontCamera">Front Camera</string>
    <string name="SBackCamera">Back Camera</string>
    <string name="title_activity_main">Scottish Weather</string>
    <string name="developed">Developed by Sylwester Zalewski</string>
</resources>
