<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.88"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.88" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >



                <org.opencv.javacv.facerecognition.Tutorial3View
                    android:id="@+id/tutorial3_activity_java_surface_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@+id/imageView1" />

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="120dp"
                    android:layout_height="140dp"
                    android:src="@drawable/lightbulb" />
                <TextView
                    android:id="@+id/textLikely"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"

                    android:layout_below="@+id/imageView1"
                    android:text="0"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="68dp"
                    android:layout_alignParentBottom="true">

                    <ToggleButton
                        android:id="@+id/toggleButton1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.07"
                        android:text="@string/STrain"
                        android:textOff="@string/STrain"
                        android:textOn="@string/SStopTrain" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.71"
                        android:text="@string/SFaceName"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <EditText
                        android:id="@+id/editText1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1.70"
                        android:maxLines="1"
                        android:singleLine="true" >

                        <requestFocus />
                    </EditText>

                    <ToggleButton
                        android:id="@+id/buttonBuscar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/SSearch"
                        android:textOff="@string/SSearch"
                        android:textOn="@string/SStopSearch" />
                    <Button
                        android:id="@+id/buttonCat"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/SViewAll" />

                    <ToggleButton
                        android:id="@+id/toggleButtonGrabar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Grabar"
                        android:textOff="Rec"
                        android:textOn="Stop" />

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewState"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="@string/SIdle"
                android:maxLines="1"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>
        

            
    	</LinearLayout>
    
</LinearLayout>